--- a/src/components/Dashboard/MySurveys/FullSurveysList/Card/Card.css
+++ b/src/components/Dashboard/MySurveys/FullSurveysList/Card/Card.css
@@ -37,7 +37,7 @@
     padding: 5px 0;
     padding-bottom: 15px;
     max-width: 300px;
-    /* word-wrap: break-word; */
+    word-wrap: break-word;
     overflow-wrap: break-word;
 }
 .Card__statistic{
