--- a/src/components/Dashboard/SurveyConteiner/components/QuestionBlock/QuestionBlock.css
+++ b/src/components/Dashboard/SurveyConteiner/components/QuestionBlock/QuestionBlock.css
@@ -12,6 +12,7 @@
   letter-spacing: normal;
   color: #4a4a4a;
   letter-spacing: 0.3px;
+  word-break: break-word;
   overflow-wrap: break-word;
 }
 
