--- a/src/components/Dashboard/SurveyForm/SurveyForm.css
+++ b/src/components/Dashboard/SurveyForm/SurveyForm.css
@@ -24,6 +24,7 @@
     font-style: normal;
     color: #4a4a4a;
     padding:  5px 0;
+    word-break: break-word;
     overflow-wrap: break-word;
 }
 
@@ -31,6 +32,7 @@
     font-size: 16px;
     color: #707070;
     padding: 5px 0;
+    word-break: break-word;
     overflow-wrap: break-word;
 }
 
